| Summary: | ASTERISK-22311: [patch] 'identify' configObject doesn't have a synopsis | ||
| Reporter: | Rusty Newton (rnewton) | Labels: | |
| Date Opened: | 2013-08-18 13:32:27 | Date Closed: | 2013-09-13 08:28:01 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_endpoint_identifier_ip |
| Versions: | SVN 12 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Trunk | Attachments: | ( 0) identify.patch |
| Description: |
{noformat} <configObject name="identify"> <configOption name="endpoint"> <synopsis>Name of Endpoint</synopsis> </configOption> <configOption name="match"> <synopsis>IP addresses or networks to match against</synopsis> </configOption> <configOption name="type"> <synopsis>Must be of type 'identify'.</synopsis> </configOption> </configObject> {noformat} | ||
| Comments: | |||