'identify' configObject doesn't have a synopsis

Add a straightforward synopsis and description to the identify config object
in XML documentation.

(issue ASTERISK-22311)
(closes issue ASTERISK-22311)
Reported By: Rusty Newton
........

Merged revisions 399031 from http://svn.asterisk.org/svn/asterisk/branches/12


git-svn-id: https://origsvn.digium.com/svn/asterisk/trunk@399032 65c4cc65-6c06-0410-ace0-fbb531ad65f3